--- a/public/style.css
+++ b/public/style.css
@@ -13,15 +13,16 @@ body {
 
 .search {
   display: flex;
-  /* width: 90%; */
   margin: 3%;
   height: 3rem;
   text-align: center;
 }
-.form{
+
+.form {
   display: flex;
   width: 100%
 }
+
 .form__userinput {
   flex-grow: 80;
   padding: 1rem;
@@ -35,24 +36,89 @@ body {
   font-size: 1rem;
 }
 
-.news-section{
-  
+.news-section {
+  align-self: center;
+  padding: 0 1%
+}
+
+.container {
   align-self: center;
 }
-.news-article{
-  margin: .5rem;
 
+
+.news__article {
+  margin: .5rem;
+  display: flex;
+}
+.news__article a{
+  
+}
+.news__image {
+  width: 35%;
+  max-height: 100%;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.footer {
+.news__img {
+  max-width: 100%;
+  height: auto;
+}
+
+.news__details {
+  width: 65%;
+}
+
+.news .footer {
   position: absolute;
   bottom: 0%;
-  width:100%;
+  width: 100%;
 }
 
 .footer__link {
   align-self: flex-end
 }
-@media (min-width: 600px){
 
+/* loader */
+.lds-hourglass {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.hide{
+  display: none;
+}
+.lds-hourglass:after {
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  width: 0;
+  height: 0;
+  margin: 6px;
+  box-sizing: border-box;
+  border: 26px solid #06579e;
+  border-color: #06579e transparent #06579e transparent;
+  animation: lds-hourglass 1.2s infinite;
+}
+@keyframes lds-hourglass {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  100% {
+    transform: rotate(1800deg);
+  }
+}
+
+
+@media (min-width: 800px) {
+  .news-section {
+    padding: 0 7%
+  }
 }
