--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,8 @@ body {
 
 .news-section {
   align-self: center;
-  padding: 0 1%
+  padding: 0 1%;
+  text-align: left;
 }
 
 .container {
@@ -51,8 +52,17 @@ body {
   margin: .5rem;
   display: flex;
 }
-.news__article a{
 
+.news__article a:link, .news__article a:visited {
+  color: rgba(221, 36, 36, 0.87);
+  text-decoration-line: none;
+}
+.news__details div {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.news__details div h4 {
+  margin: 0 4px;
 }
 .news__image {
   width: 35%;
@@ -69,6 +79,7 @@ body {
 
 .news__details {
   width: 65%;
+  padding: 0rem 3rem;
 }
 
 .news .footer {
